assets/css/main.css
/* ... */
@media only screen and (min-width:550px) {
    .header-links .link {
        font-size: 20px
    }
}

.header-icons {
    display: flex;
    justify-content: center;
    text-align: center
}

.down,
.header-icons .icon {
    color: #fff;
    text-align: center
}

.header-icons .icon {
    height: 20px;
    padding: 10px;
    border-radius: 50%;
    border: 2px solid #fff;
    transition: all .7s;
    width: 20px;
    font-size: 20px;
    margin: 5px
}

.header-icons .icon:active,
.header-icons .icon:hover {
    color: #1488CC;
    background: #fff
}

@media only screen and (min-width:550px) {
    .header-icons .icon {
        width: 35px;
        height: 35px;
        font-size: 35px
    }
}

.down {
    position: absolute;
    bottom: 25px;
    width: 100%;
    margin: 0 auto;
    display: block;
    font-size: 30px;
    cursor: pointer
}

.down .icon {
    position: absolute;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 100px;
    height: 100px;
    fill: #fff;
    -webkit-animation: pulse 1.3s infinite;
    animation: pulse 1.3s infinite
}

.down .icon:active,
.down .icon:hover,
.footer a:active,
.footer a:hover {
    color: #4b5664
}

#about {
    width: 90%;
    margin: 0 auto;
    max-width: 960px
}

@media only screen and (min-width:550px) {
    #about {
        width: 80%
    }
}

.tech {
    margin: 10px;
    flex: 1;
    min-width: 180px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.tech-icons {
    display: grid;
    grid-template-columns: repeat(2, 72px);
    gap: 12px 16px;
    justify-content: center;
    align-items: center;
    min-height: 168px;
    margin: 0 auto 12px;
}

.tech-icons i {
    font-size: 60px;
    line-height: 1;
    justify-self: center;
}

.tech-icons .tech-icon-angular {
    font-size: 72px;
}

.tech-icons .devicon-html5-plain,
.tech-icons .devicon-css3-plain,
.tech-icons .devicon-bootstrap-plain,
.tech-icons .devicon-python-plain,
.tech-icons .devicon-nodejs-plain,
.tech-icons .devicon-postgresql-plain,
.tech-icons .devicon-visualstudio-plain {
    font-size: 68px;
}

.tech-icons-languages {
    grid-template-columns: repeat(6, 36px);
    max-width: 240px;
}

.tech-icons-languages i:nth-child(1) {
    grid-column: 1 / 3;
}

.tech-icons-languages i:nth-child(2) {
    grid-column: 3 / 5;
}

.tech-icons-languages i:nth-child(3) {
    grid-column: 5 / 7;
}

.tech-icons-languages i:nth-child(4) {
    grid-column: 2 / 4;
}

.tech-icons-languages i:nth-child(5) {
    grid-column: 4 / 6;
}

.user {
    text-align: center;
    font-size: 60px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    clear: both;
}

.user p {
    font-size: 16px;
    max-width: 220px;
}

@media only screen and (min-width:550px) {
    .user {
        flex-wrap: nowrap;
        font-size: 75px;
    }

    .tech-icons {
        grid-template-columns: repeat(2, 80px);
        min-height: 188px;
    }

    .tech-icons i {
        font-size: 75px;
    }

    .tech-icons .tech-icon-angular {
        font-size: 88px;
    }

    .tech-icons .devicon-html5-plain,
    .tech-icons .devicon-css3-plain,
    .tech-icons .devicon-bootstrap-plain,
    .tech-icons .devicon-python-plain,
    .tech-icons .devicon-nodejs-plain,
    .tech-icons .devicon-postgresql-plain,
    .tech-icons .devicon-visualstudio-plain {
        font-size: 82px;
    }

    .tech-icons-languages {
        grid-template-columns: repeat(6, 40px);
        max-width: 280px;
    }
}

.user-details {
    text-align: center;
    margin: 5px auto
}

#projects {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 90%;
    max-width: 960px;
    margin: 0 auto
}

@media only screen and (min-width:550px) {
    #projects {
        width: 80%
    }
}

.user-projects {
    margin: 20px auto;
    clear: both;
    overflow: hidden;
}

#research {
    clear: both;
    overflow: hidden;
    margin: 40px auto 24px;
    width: 100%;
}

#research .research-heading {
    margin-bottom: 28px;
    position: relative;
    z-index: 2;
}

#research .research-project {
    display: grid;
    grid-template-columns: 1fr;
    gap: 24px;
    align-items: center;
    margin-top: 0;
    float: none;
}

#research .research-image,
#research .research-content {
    float: none;
    width: 100%;
    margin-top: 0;
}

#research .research-image img {
    float: none;
    display: block;
    width: 100%;
    max-width: 100%;
}

#research .research-content {
    text-align: left;
}

#research .research-content h3 {
    margin-top: 0;
    text-align: center;
}

#research .research-content p {
    text-align: justify;
    margin-right: 0;
}

@media only screen and (min-width:550px) {
    #research .research-project {
        grid-template-columns: 1fr 1fr;
        gap: 32px;
    }
}

.user-projects img {
    max-width: 100%;
    height: auto;
    border-radius: 5px
}

.user-projects h5 {
    margin: 0
}

.user-projects li {
    color: #1488CC;
    font-size: 1.1rem
}

.user-projects p {
    margin-right: 5px
}

@media only screen and (min-width:550px) {
    .contents {
        margin-left: 0;
        width: 48%
    }

    .contents,
    .contents-right {
        margin-top: -5%
    }

    .contents-right,
    .images-right {
        float: right;
        width: 48%
    }

    .images-right img {
        float: right
    }

    .images-left {
        float: left;
        width: 48%
    }

    .images-left img {
        float: left
    }
}
/* ... */

